--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -25,8 +25,6 @@
         cursor: pointer;
         
         img {
-            display: none;
-
             filter: var(--icon-color)
         }
         p {
@@ -35,3 +33,17 @@
         }
     }
 } 
+
+.button-wrap-button-text,
+.button-wrap-button-image {
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s ease;
+  position: absolute; // or relative/absolute depending on layout
+}
+
+.button-wrap-button-text.visible,
+.button-wrap-button-image.visible {
+  opacity: 1;
+  visibility: visible;
+}
